# silk_player

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: default.png_color.json  icon.rc
src/: audio.rs  components.rs  config.rs  data.rs  desktop.rs  handle_event.rs  lib.rs  main.rs  play.rs  style.rs  util.rs  view.rs
