[package]
name = "silk_player"
version = "1.0.0"
edition = "2021"
build="build.rs"

[build-dependencies]
embed-resource = "2.4.2"

[dependencies]
iced = {version="0.12.1", features = ["async-std", "image", "advanced", "multi-window"]}
#iced = { git = "https://github.com/iced-rs/iced.git", features = ["async-std", "image", "advanced", "multi-window"]}
#iced_aw = "0.8.0"
image = "0.25.1"
chrono = "0.4.35"
rand = "0.8.5"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
#rodio = "0.18.0"
#rodio = { git = "https://github.com/RustAudio/rodio.git" }
music-tag = "=0.1.0"
once_cell = "1.19.0"
rfd = "0.14.1"
kira = "0.9.0"
open = "5.1.3"
device_query = "2.1.0"
thread-priority = "1.1.0"
windows = { version = "0.58.0", features = ["Win32_System_Threading"]}
